--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.3.31",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
