--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": "ts-node src/app/api/migrations.ts"
   },
   "dependencies": {
+    "@giscus/react": "^3.0.0",
     "@internationalized/date": "^3.5.5",
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -41,8 +42,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
@@ -59,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
