--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-share": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
