--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.31",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
@@ -46,6 +47,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
+    "rehype-toc": "^3.0.2",
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
