--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tiptap/core": "^2.6.6",
     "@tiptap/extension-code-block-lowlight": "^2.6.6",
     "@tiptap/extension-color": "^2.6.6",
